# mpcli

./: README.md  config.toml  pyproject.toml
astral-audio/: .gitignore  CHANGELOG.md  README.md  astral-audio-0.0.1.vsix  package.json  pnpm-lock.yaml
astral-audio/src/: audioConverter.ts  converter.ts  dialog.ts  extension.ts  files.ts  timestretch.ts
astral-audio/src/dialogs/: dialog.css  dialog.js
backend/: .gitignore  README.md  cli-config-moonlight-sonata.toml  cli-config-template.toml  config.toml  pyproject.toml
backend/src/mpcli/: api.py  cli.py
backend/src/mpcli/entities/: result.py  source.py
backend/src/mpcli/repository/: audio_convert.py  audio_file.py  audio_transform.py
backend/src/mpcli/use_cases/: convert.py  normalization.py  timestretch.py
backend/tests/: conftest.py
backend/tests/entities/: test_audio_source.py
backend/tests/repository/: test_audio_convert.py  test_audio_file.py  test_tempo.py
bruno-api/: Convert.yml  Normalize.yml  Tempo.yml  Timestretch.yml  opencollection.yml
bruno-api/environments/: Localhost.yml
frontend/: README.md  package.json  pnpm-lock.yaml
frontend/src/routes/: +page.svelte  layout.css
src/mpcli/: api.py  cli.py  cli_entities.py  main.py
src/mpcli/entities/: config.py  result.py  source.py
src/mpcli/repository/: audio_convert.py  audio_file.py  audio_transform.py  exceptions.py  files.py  tempo.py  toml_config.py
src/mpcli/use_cases/: convert.py  normalization.py  tempo.py  timestretch.py
tests/: conftest.py
tests/api/: test_upload.py
tests/entities/: test_config.py
tests/repository/: test_audio_convert.py  test_audio_file.py  test_audio_transform.py
tests/use_cases/: test_timestrech_uc.py
