[project]
name = "mpcli"
version = "0.1.0"
description = ""
authors = [
    {name = "gustelle",email = "guillaume.patin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "typer (>=0.21.1,<0.22.0)",
    "demucs (>=4.0.1,<5.0.0)",
    "tempocnn (>=0.0.8,<0.0.9)",
    "audiomentations[extras] (>=0.43.1,<0.44.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "rich (>=14.3.2,<15.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
]

[tool.poetry]
packages = [{include = "mpcli", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "setuptools (>=80.10.2,<81.0.0)",
    "wheel (>=0.46.3,<0.47.0)"
]

[tool.poetry.scripts]
detect_tempo = "mpcli.main:detect_tempo"
timestretch = "mpcli.main:timestretch"
convert = "mpcli.main:convert"



